--- a/HiDoctorApp/Views/TP/TPStepperViewController.storyboard
+++ b/HiDoctorApp/Views/TP/TPStepperViewController.storyboard
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="15705" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="15400" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina3_5" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15706"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15404"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="collection view cell content view" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -229,7 +229,10 @@
                                                             <rect key="frame" x="40" y="0.0" width="270" height="82"/>
                                                             <subviews>
                                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Sathya Narayan" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Kx5-KZ-7b7">
-                                                                    <rect key="frame" x="44" y="11.5" width="102.5" height="18"/>
+                                                                    <rect key="frame" x="44" y="10.5" width="102.5" height="20"/>
+                                                                    <constraints>
+                                                                        <constraint firstAttribute="height" constant="20" id="nLN-ck-daE"/>
+                                                                    </constraints>
                                                                     <fontDescription key="fontDescription" name="SFUIDisplay-Regular" family="SF UI Display" pointSize="15"/>
                                                                     <nil key="textColor"/>
                                                                     <nil key="highlightedColor"/>
@@ -255,8 +258,8 @@
                                                                     </connections>
                                                                 </button>
                                                                 <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="252" text="Park town | manager | skin regunuvation" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="HPf-Wv-iYn">
-                                                                    <rect key="frame" x="44" y="34.5" width="216" height="36"/>
-                                                                    <fontDescription key="fontDescription" name="SFUIDisplay-Regular" family="SF UI Display" pointSize="15"/>
+                                                                    <rect key="frame" x="44" y="35.5" width="183" height="29"/>
+                                                                    <fontDescription key="fontDescription" name="SFUIDisplay-Regular" family="SF UI Display" pointSize="12"/>
                                                                     <color key="textColor" white="0.33333333329999998" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                                     <nil key="highlightedColor"/>
                                                                 </label>
@@ -274,11 +277,11 @@
                                                                 <constraint firstItem="HPf-Wv-iYn" firstAttribute="top" secondItem="Kx5-KZ-7b7" secondAttribute="bottom" constant="5" id="3ca-oL-p6h"/>
                                                                 <constraint firstItem="HPf-Wv-iYn" firstAttribute="leading" secondItem="Kx5-KZ-7b7" secondAttribute="leading" id="Gcl-VC-rr7"/>
                                                                 <constraint firstItem="USM-QB-Ecl" firstAttribute="leading" secondItem="A4J-6a-vV3" secondAttribute="leading" constant="10" id="Mxf-LK-QDG"/>
+                                                                <constraint firstItem="szt-bR-O9w" firstAttribute="leading" secondItem="HPf-Wv-iYn" secondAttribute="trailing" constant="8" id="PGI-G2-ar0"/>
                                                                 <constraint firstItem="USM-QB-Ecl" firstAttribute="centerY" secondItem="A4J-6a-vV3" secondAttribute="centerY" id="Sr3-5C-4Xn"/>
                                                                 <constraint firstAttribute="trailing" secondItem="szt-bR-O9w" secondAttribute="trailing" constant="15" id="XyG-eg-EI3"/>
                                                                 <constraint firstItem="Kx5-KZ-7b7" firstAttribute="centerY" secondItem="USM-QB-Ecl" secondAttribute="centerY" multiplier="0.5" id="cjE-73-mlW"/>
                                                                 <constraint firstItem="szt-bR-O9w" firstAttribute="centerY" secondItem="A4J-6a-vV3" secondAttribute="centerY" id="g9X-lh-cJa"/>
-                                                                <constraint firstItem="HPf-Wv-iYn" firstAttribute="width" secondItem="A4J-6a-vV3" secondAttribute="width" multiplier="0.8" id="pYc-rh-Bvf"/>
                                                                 <constraint firstItem="Kx5-KZ-7b7" firstAttribute="leading" secondItem="USM-QB-Ecl" secondAttribute="trailing" constant="10" id="wi7-ln-xJ1"/>
                                                             </constraints>
                                                         </view>
@@ -522,7 +525,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="agC-7f-Pz7" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-356" y="-1015"/>
+            <point key="canvasLocation" x="-356.25" y="-1015"/>
         </scene>
         <!--Meeting Objective View Controller-->
         <scene sceneID="xo3-yG-G1e">
@@ -2438,7 +2441,7 @@
                                                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Q8d-ZA-noz" userLabel="Card View" customClass="CornerRadiusWithShadowView" customModule="HiDOCTOR" customModuleProvider="target">
                                                             <rect key="frame" x="49" y="4" width="263" height="2"/>
                                                             <subviews>
-                                                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="eco-0Y-smP" userLabel="Section Title View">
+                                                                <view contentMode="scaleToFill" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="eco-0Y-smP" userLabel="Section Title View">
                                                                     <rect key="frame" x="0.0" y="0.0" width="263" height="2"/>
                                                                     <subviews>
                                                                         <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="icon-work" translatesAutoresizingMaskIntoConstraints="NO" id="Es6-GQ-bLU" userLabel="Section Header Image View" customClass="TintColorForImageView" customModule="HiDOCTOR" customModuleProvider="target">
@@ -2473,7 +2476,7 @@
                                                                         <constraint firstAttribute="trailing" secondItem="M0l-xr-Y89" secondAttribute="trailing" constant="8" id="rKa-z7-5TO"/>
                                                                     </constraints>
                                                                 </view>
-                                                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="uTC-zW-wT2" userLabel="Child table View">
+                                                                <view contentMode="scaleToFill" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="uTC-zW-wT2" userLabel="Child table View">
                                                                     <rect key="frame" x="0.0" y="2" width="263" height="0.0"/>
                                                                     <subviews>
                                                                         <tableView clipsSubviews="YES" tag="2" contentMode="scaleToFill" alwaysBounceVertical="YES" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="120" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="Mxo-Wl-ou5" userLabel="Child Table View">
@@ -3180,6 +3183,7 @@
                         <viewLayoutGuide key="safeArea" id="E9h-iQ-mTR"/>
                     </view>
                     <connections>
+                        <outlet property="submitView" destination="jTh-8O-Mew" id="tgg-O4-0qB"/>
                         <outlet property="submitViewHgtConst" destination="cYg-Xi-98W" id="q9n-Ym-8ML"/>
                         <outlet property="tableView" destination="5rV-qi-rnj" id="2Nc-Vq-frx"/>
                     </connections>
