--- a/HiDoctorApp/Views/DCR/LeaveEntryViewController.storyboard
+++ b/HiDoctorApp/Views/DCR/LeaveEntryViewController.storyboard
@@ -546,7 +546,7 @@
                                                 </constraints>
                                             </view>
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="VUS-6y-rvE">
-                                                <rect key="frame" x="0.0" y="104" width="320" height="139"/>
+                                                <rect key="frame" x="0.0" y="104" width="320" height="200"/>
                                                 <subviews>
                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Reason for Not Working" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontForContentSizeCategory="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="k7a-6l-jlN">
                                                         <rect key="frame" x="10" y="10" width="300" height="18"/>
@@ -555,19 +555,23 @@
                                                         <nil key="highlightedColor"/>
                                                     </label>
                                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="RsJ-qf-0HV" customClass="CornerRadiusWithShadowView" customModule="HiDOCTOR" customModuleProvider="target">
-                                                        <rect key="frame" x="10" y="31.5" width="300" height="84.5"/>
+                                                        <rect key="frame" x="10" y="31.5" width="300" height="145.5"/>
                                                         <subviews>
                                                             <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" keyboardDismissMode="onDrag" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="Ibb-ne-UWd" customClass="PlaceHolderForTextView" customModule="HiDOCTOR" customModuleProvider="target">
-                                                                <rect key="frame" x="0.0" y="5" width="300" height="74.5"/>
+                                                                <rect key="frame" x="0.0" y="5" width="300" height="135.5"/>
                                                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                                                <fontDescription key="fontDescription" name="SFUIText-Regular" family="SF UI Text" pointSize="14"/>
+                                                                <fontDescription key="fontDescription" name="SFUIText-Regular" family="SF UI Text" pointSize="16"/>
                                                                 <textInputTraits key="textInputTraits" autocorrectionType="no" spellCheckingType="yes" keyboardType="alphabet" enablesReturnKeyAutomatically="YES"/>
+                                                                <dataDetectorType key="dataDetectorTypes" phoneNumber="YES" link="YES"/>
                                                                 <userDefinedRuntimeAttributes>
                                                                     <userDefinedRuntimeAttribute type="color" keyPath="placeholderColor">
                                                                         <color key="value" white="0.66666666669999997" alpha="1" colorSpace="calibratedWhite"/>
                                                                     </userDefinedRuntimeAttribute>
                                                                     <userDefinedRuntimeAttribute type="string" keyPath="placeholder" value="Enter the reason here"/>
                                                                 </userDefinedRuntimeAttributes>
+                                                                <connections>
+                                                                    <outlet property="delegate" destination="4A5-UA-DaT" id="gIc-gw-XKb"/>
+                                                                </connections>
                                                             </textView>
                                                         </subviews>
                                                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
@@ -579,7 +583,7 @@
                                                         </constraints>
                                                     </view>
                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ECS-2l-dBk">
-                                                        <rect key="frame" x="240" y="121" width="70" height="0.0"/>
+                                                        <rect key="frame" x="240" y="182" width="70" height="0.0"/>
                                                         <constraints>
                                                             <constraint firstAttribute="width" constant="70" id="lrT-Qx-rVA"/>
                                                         </constraints>
@@ -592,7 +596,7 @@
                                                     <constraint firstItem="k7a-6l-jlN" firstAttribute="top" secondItem="VUS-6y-rvE" secondAttribute="top" constant="10" id="1EY-7I-lW3"/>
                                                     <constraint firstAttribute="trailing" secondItem="ECS-2l-dBk" secondAttribute="trailing" constant="10" id="2ua-nG-N7O"/>
                                                     <constraint firstItem="RsJ-qf-0HV" firstAttribute="top" secondItem="k7a-6l-jlN" secondAttribute="bottom" constant="3.5" id="Aiv-Z3-bkA"/>
-                                                    <constraint firstAttribute="height" constant="139" id="V2V-9x-sTw"/>
+                                                    <constraint firstAttribute="height" constant="200" id="V2V-9x-sTw"/>
                                                     <constraint firstItem="RsJ-qf-0HV" firstAttribute="trailing" secondItem="k7a-6l-jlN" secondAttribute="trailing" id="cbr-k6-wa9"/>
                                                     <constraint firstAttribute="trailing" secondItem="k7a-6l-jlN" secondAttribute="trailing" constant="10" id="deg-Ka-LdF"/>
                                                     <constraint firstAttribute="bottom" secondItem="RsJ-qf-0HV" secondAttribute="bottom" constant="23" id="uX4-yR-U7g"/>
@@ -615,7 +619,7 @@
                                         </constraints>
                                     </view>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="xe5-19-2eo">
-                                        <rect key="frame" x="0.0" y="253" width="320" height="97"/>
+                                        <rect key="frame" x="0.0" y="314" width="320" height="97"/>
                                         <subviews>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="a7S-e4-Jd4">
                                                 <rect key="frame" x="110" y="15" width="100" height="40"/>
