--- a/HiDoctorApp/Views/AudioPlayerControlsView.xib
+++ b/HiDoctorApp/Views/AudioPlayerControlsView.xib
@@ -1,11 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="12118" systemVersion="16E195" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
-    <device id="retina4_7" orientation="portrait">
-        <adaptation id="fullscreen"/>
-    </device>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="15400" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+    <device id="retina4_7" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12086"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15404"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
@@ -78,7 +76,7 @@
                     <rect key="frame" x="0.0" y="283" width="823" height="90"/>
                     <subviews>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="8Uj-re-Wpk">
-                            <rect key="frame" x="374.5" y="7.5" width="75" height="75"/>
+                            <rect key="frame" x="374" y="7.5" width="75" height="75"/>
                             <constraints>
                                 <constraint firstAttribute="width" constant="75" id="2Uj-eR-YvO"/>
                                 <constraint firstAttribute="height" constant="75" id="m2i-ya-TUU"/>
@@ -88,13 +86,13 @@
                             </state>
                         </button>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="hWE-Pv-rQ2">
-                            <rect key="frame" x="499.5" y="17" width="56" height="56"/>
+                            <rect key="frame" x="499" y="-11" width="112" height="112"/>
                             <state key="normal" image="icon-play-next-LS">
                                 <color key="titleColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
                             </state>
                         </button>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="BEX-ty-s1B">
-                            <rect key="frame" x="268.5" y="17" width="56" height="56"/>
+                            <rect key="frame" x="212" y="-11" width="112" height="112"/>
                             <state key="normal" image="icon-play-previous-LS">
                                 <color key="titleColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
                             </state>
